qtwebengine-opensource-src (5.11.1+dfsg-1) UNRELEASED; urgency=medium

  [ Simon Quigley ]
  * New upstream release.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 30 Jun 2018 14:37:33 -0500

qtwebengine-opensource-src (5.10.1+dfsg-4) unstable; urgency=medium

  * Backport two upstream patches to fix build with system ICU 60:
    - icu60-no-aspirational-scripts.patch to disallow aspirational scripts.
    - icu60-uchar.patch to fix build when UChar is signed char16_t.
  * Backport upstream patch to fix QtWebEngineProcess resources loading
    (separate-argv.patch, see upstream QTBUG-66346).
  * Update Vcs fields for migration to salsa.debian.org.
  * Update symbols files from buildds’ logs.
  * Bump Standards-Version to 4.1.4, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 13 May 2018 11:50:52 +0300

qtwebengine-opensource-src (5.10.1+dfsg-3) unstable; urgency=medium

  * Update symbols files with buildds' logs.
  * Release to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sat, 07 Apr 2018 20:43:19 -0300

qtwebengine-opensource-src (5.10.1+dfsg-2) experimental; urgency=medium

  * Update debian/libqt5webenginecore5.symbols from buildds’ logs.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 17 Mar 2018 16:07:29 +0300

qtwebengine-opensource-src (5.10.1+dfsg-1) experimental; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Backport upstream patch to fix build with ICU 60.
  * Update debian/watch for the new upstream tarball names.
  * Remove items from Files-Excluded which are no longer in the tarball.
  * Refresh other patches.
  * Bump Qt build-dependencies to 5.10.1.
  * Update symbols files from the current build log.
  * Stop using WEBENGINE_CONFIG, it has been removed in 5.10.
  * Remove undefined linux_link_libpci option.
  * Remove undefined use_system_yasm option, we unbundle it using the
    replace_gn_files.py script anyway.