@@ -67,7 +67,7 @@ override_dh_auto_clean:
 	rm -rf $(CURDIR)/examples/webenginewidgets/contentmanipulation/jquery*.js
 	rm -rf $(CURDIR)/examples/webenginewidgets/markdowneditor/resources/3rdparty/marked*.js
 	rm -rf $(CURDIR)/examples/webengine/recipebrowser/resources/pages/assets/3rdparty/marked*.js
-	
+
 	for fname in $(touch_files); do \
 		rm -rf $(CURDIR)/$${fname}; \
 	done
@@ -122,7 +122,7 @@ endif
 
 	# Make ld not cache the symbol tables of input files in memory to avoid memory exhaustion during the linking phase.
 	echo "QMAKE_LFLAGS += -Wl,--no-keep-memory" >> .qmake.conf
-	
+
 	# Missing hardening flag detected by blhc
 	echo "QMAKE_LFLAGS += -Wl,-z,now" >> .qmake.conf
 
@@ -137,7 +137,7 @@ endif
 		--js jstemplate.js \
 		--js exports.js \
 		--js_output_file jstemplate_compiled.js
-	
+
 	>examples/webenginewidgets/contentmanipulation/jquery.js cat debian/missing-sources/jquery-*.js
 	yui-compressor --type js "examples/webenginewidgets/contentmanipulation/jquery.js" -o "examples/webenginewidgets/contentmanipulation/jquery.min.js"
 	>examples/webenginewidgets/markdowneditor/resources/3rdparty/marked.js tar xaf debian/missing-sources/marked*.tar.gz --wildcards --to-stdout '*/marked.js'
@@ -146,7 +146,7 @@ endif
 	yui-compressor --type js "examples/webenginewidgets/markdowneditor/resources/3rdparty/marked.js" -o "examples/webenginewidgets/markdowneditor/resources/3rdparty/marked.min.js"
 	yui-compressor --type js "examples/webengine/recipebrowser/resources/pages/assets/3rdparty/marked.js" -o "examples/webengine/recipebrowser/resources/pages/assets/3rdparty/marked.min.js"
 
-	
+
 	for fname in $(touch_files); do \
 		touch $(CURDIR)/$${fname}; \
 	done
@@ -160,14 +160,14 @@ override_dh_auto_build-indep: override_dh_auto_build-arch
 
 override_dh_auto_install-arch:
 	dh_auto_install
-	
+
 	# Remove rpath from the offending binaries
 	chrpath -d $(CURDIR)/debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/qt5/libexec/QtWebEngineProcess
-	
+
 	# Fix wrong path in pkgconfig files
 	find $(CURDIR)/debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/pkgconfig -type f -name '*.pc' \
 	-exec sed -i -e 's/$(DEB_HOST_MULTIARCH)\/$(DEB_HOST_MULTIARCH)/$(DEB_HOST_MULTIARCH)/g' {} \;
-	
+
 	# Remove libtool-like files
 	rm -fv debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/*.la
 
@@ -183,7 +183,7 @@ override_dh_link:
 		usr/share/javascript/marked/marked.min.js usr/lib/$(DEB_HOST_MULTIARCH)/qt5/examples/webenginewidgets/markdowneditor/resources/marked.min.js
 	dh_link --package=qtwebengine5-dev-tools \
 		usr/lib/qt5/bin/qwebengine_convert_dict usr/lib/$(DEB_HOST_MULTIARCH)/qt5/bin/qwebengine_convert_dict
-	
+
 	dh_link --remaining-packages
 
 override_dh_auto_test-arch:
